# rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: rag-knowledge-system.mdc
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: auth.py  deps.py  filename.py  rate_limit.py  routes.py
app/models/: schemas.py
app/services/: embeddings.py  generation.py  ingestion.py  llm_health.py  retrieval.py  vector_store.py
app/utils/: logging.py  metrics.py
eval/: README.md
eval/golden/: questions.jsonl  rubric.md
eval/golden/fixtures/: chunking-strategies.txt  embeddings-faiss.txt  evaluation-metrics.txt  llm-hallucinations.txt  prompt-injection.txt  rag-overview.txt  vector-stores.txt
eval/scripts/: ingest_fixtures.py
rag_knowledge_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py  test_golden_set.py  test_ingestion.py  test_main_app.py  test_retrieval.py  test_services.py  test_ui_helpers.py  test_vector_store.py
ui/: helpers.py  streamlit_app.py
