[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knowledge-system"
version = "1.0.0"
description = "RAG stack: FastAPI, FAISS, Streamlit UI, configurable embeddings and LLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "PyMuPDF>=1.24.0",
    "openai>=1.12.0",
    "sentence-transformers>=2.3.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "streamlit>=1.31.0",
    "pytest>=8.0.0",
    "pylint>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pylint.main]
init-hook = """
import sys
from pathlib import Path
_root = Path.cwd()
if str(_root) not in sys.path:
    sys.path.insert(0, str(_root))
_venv = _root / '.venv'
if _venv.is_dir():
    if sys.platform == 'win32':
        _sp = _venv / 'Lib' / 'site-packages'
    else:
        _sp = next(
            (p for p in (_venv / 'lib').glob('python*/site-packages') if p.is_dir()),
            None,
        )
    if _sp is not None and _sp.is_dir() and str(_sp) not in sys.path:
        sys.path.insert(0, str(_sp))
"""

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pylint.DESIGN]
max-args = 8
max-positional-arguments = 8
max-locals = 24
max-attributes = 12

[tool.pylint.SIMILARITIES]
min-similarity-lines = 12
